# Copyright: (C) 2016 Social Robotics Lab - Yale University
# Authors: Alessandro Roncone
# CopyPolicy: Released under the terms of the LGPLv2.1.

cmake_minimum_required(VERSION 2.8.3)
project(task-models-lib)

include_directories(${PROJECT_SOURCE_DIR}/${PROJECT_NAME}/include)

# add_library(${PROJECT_NAME} ${PROJECT_NAME}/include/htm.h     ${PROJECT_NAME}/src/htm.cpp)

# target_link_libraries(${PROJECT_NAME})
